[package]
name = "data-backup"
version = "0.1.0"
edition = "2024"

[dependencies]

clap        = { version = "4", features = ["derive"] }
indicatif   = "0.17"          
log         = "0.4"
env_logger  = "0.11"
serde       = { version = "1.0", features = ["derive"] }
toml        = "0.8"
thiserror   = "1.0"
ssh2        = "0.9"
chrono = { version = "0.4.41", features = ["serde"] }


serde_json = "1.0.140"
sha2 = "0.10.9"
hex = "0.4.3"
